versioned_docs/version-6.0/enterprise/waf/listener/profiles/policy/policy.md
---
sidebar_position: 5
title: "Policy Management | Haltdos Docs"
description: "Index defining layout parsing rules across various content encoding strategies (Web, JSON, XML)."
---

# Policy

#### Define security policy for your website

Haltdos WAF associates security policies with both HTTP and HTTPS services. It includes preset configured security settings that apply to all associated services. The policies are shareable. You only have to create them once, and you can later assign them to more than one service. The rules of the security policy specify inspection criteria for both input or output data and help in determining vulnerable or malicious data. It includes both negative and positive elements. (Major section is a negative element). For most sites, it implements good web application security. Using security rules for different sub-domains, you can custom-design security policy.

Three types of Policies:
1. [**Web Policy**](web_policy.md)
2. [**JSON Policy**](json_policy.md)
3. [**XML Policy**](xml_policy.md)
